#2173 fix layout problems for small browser windows in moodleform
If there are some checkboxes in the form and only the first one has a text on the left, the layout breaks for small browser windows. Better is to make a checkboxgroup with 1 label on the left.  Also removed some old stylesheet-code.

--- a/styles.css
+++ b/styles.css
@@ -103,27 +103,3 @@ span.downloadlink {
     left: 0;
     padding: 2px 5px;
 ]
-
-/*#checkmarkreporttable .tooltip::before {
-    content: attr(data-tip) ;
-
-    font-size: 10px;
-    position:absolute;
-    z-index: 999;
-    white-space:nowrap;
-    bottom:9999px;
-    left: 50%;
-    background:#000;
-    color:#e0e0e0;
-    padding:0px 7px;
-    line-height: 24px;
-    height: 24px;
-
-    opacity: 0;
-    transition:opacity 0.4s ease-out;
-    }
-
-#checkmarkreporttable .tooltip:hover::before {
-    opacity: 1;
-    bottom:-35px;
-    }*/
